--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -23,9 +23,9 @@
     <title>Epic React Exercise 01</title>
   </head>
   <body>
-    <div id="root"></div>
-
     <script type="module">
+      const root = document.createElement('div')
+      root.setAttribute('id', 'root')
       const div = document.createElement('div')
       div.textContent = 'Hello World!'
       document.getElementById('root').appendChild(div)
